--- a/index.html
+++ b/index.html
@@ -1,44 +1,109 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-ie">
+
+<!-- made with the hands of a human. 
+          https://notbyai.fyi/      -->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jackinfurs</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: 'Consolas', monospace;
-            text-align: center;
-        }
-        .container {
-            display: inline-block;
-        }
-        h1 {
-            margin: 0;
-            font-size: 3em;
-        }
-        h2 {
-            margin: 0;
-            font-size: 1.5em;
-        }
-		h3 {
-			margin: 0;
-			font-size: 1em;
-		}
-    </style>
+    <title>/home/jackinfurs</title>
+	<base target="_blank" rel="noopener"/>
+
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name="description" content="The homepage of the personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
+	<meta name="keywords" content="jackinfurs, Jack Dunne"/>
+	<meta name="robots" content="index, follow"/>
+
+	<!-- TODO use webp -->
+	<link rel="canonical" href="https://jackinfurs.ie/"/>
+	<link rel="icon" type="image/png" sizes="64x64" href="assets/icon64.png"/>
+	<link rel="preload stylesheet" as="style" type="text/css" href="css/main.css"/>
+
+	<meta name="author" content="Jack Dunne (jackinfurs)"/>
+	<meta name="theme-color" content="#100f0f"/>
+
+	<meta property="og:site_name" content="jackinfurs"/>
+	<meta property="og:title" content="jackinfurs"/>
+    <meta property="og:description" content="The personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
+	<meta property="og:image" content="assets/icon.png"/> <!-- TODO get something nicer for the cover image here, also provide actual URLs -->
+	<meta property="og:image:alt" content="jackinfurs"/>
+    <meta property="og:url" content="https://jackinfurs.ie/"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:locale" content="en_IE"/>
+
+	<meta name="twitter:title" content="jackinfurs"/>
+	<meta name="twitter:description" content="The personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
+	<meta name="twitter:image" content="assets/icon.png"/> <!-- TODO get something nicer for the cover image here -->
+	<meta name="twitter:image:alt" content="jackinfurs"/>
+	<meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:creator" content="jackinfurs"/>
+	<meta name="twitter:site" content="jackinfurs"/>
+	<meta name="twitter:url" content="https://jackinfurs.ie/"/>
 </head>
 
 <body>
-    <div class="container">
-        <h1>under construction</h1>
-        <h2>check back another time !</h2>
-		<h3>-jackinfurs</h3>
-    </div>
+	<div id="content">
+		<header>
+			<h1 id="header">Jack Dunne</h1>
+		</header>
+
+		<nav>
+			<a href="https://www.codeberg.org/jackinfurs/" title="codeberg.org/jackinfurs"><img src="assets/codeberg.svg" style="width:30px; height:30px;" alt="jackinfurs on Codeberg"/></a>
+			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="assets/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
+			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="assets/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
+			<a href="index.html" target="_self"><strong>home</strong></a>
+			<a href="music/index.html" target="_self">music</a>
+			<a href="blog/index.html" target="_self">blog</a>
+		</nav>
+
+		<main>
+			<h2>About</h2>
+			<p>
+			My name is Jack, of Dublin, Ireland.
+			</p>
+			<p>
+			I am in my <b>final year</b> of completing a four-year BSc. Computer Science degree at <a href="https://hub.ucd.ie/usis/!W_HU_MENU.P_PUBLISH?p_tag=COURSE&MAJR=CSSA&KEYWORD=bsc%20computer%20science">University College Dublin</a>.<br/>
+			Under the supervision of <a href="https://people.ucd.ie/ravi.manumachu">Ravi Manumachu, Ph.D</a>, my research addresses <strong>the evolution of dynamic voltage/frequency scaling governors in the Linux kernel, specifically with their applications to the field of energy-efficient high-performance computing.</strong>
+			</p>
+			<!-- <img src="assets/icon.png" style="width: 350px; height: 350px; margin: 50px;" alt="Portrait photo"/> -->
+
+			<h2>Background</h2>
+			<p>
+			Aside from working on my degree, I help to maintain <strong><a href="https://www.codeberg.org/jackinfurs/dwl">dwl</a></strong>; a hackable <a href="https://en.wikipedia.org/wiki/Tiling_window_manager#Dynamic_window_manager">dynamic window manager</a> intending to serve the same role for the Wayland protocol as its predecessor <a href="https://dwm.suckless.org/">dwm</a> does for X11.
+			</p>
+			<p>
+			Additionally, I have worked commercially as a service engineer with my family since the age of fourteen. Originally it was so that I could afford my first guitar, which has long-since been paid for.<br/>
+			Among many other personal interests outside of work, I like fixing up audio equipment to make interesting noises. You can listen to a few of the bits I've made on <a href="music/index.html" target="_self">this page</a>. :)
+			</p>
+
+			<h2>Aspirations</h2>
+<!-- TODO: education (in bold) + grades -->
+			<p>
+			Broadly speaking, my primary research interests include <b>the applications of parallel computing across heterogeneous systems</b>; the reasoning for which led to me becoming a member of the <a href="https://www.sighpc.org/">ACM's Special Interest Group for High-Performance Computing</a>.
+			</p>
+			<p>
+			As for occupational aspirations, firstly I aim to operate in the field of technical/scientific computing, before acting as a system administrator for high-performance computing clusters, and finally contributing academically to the field of high-performance computing through post-doctoral research.
+			</p>
+			<p>
+			You can view my public CV <b><a href="assets/cv.pdf">here</a></b>.<br/>
+			Do note however that certain personal details are redacted (for brevity/privacy). A more personalised CV catered to your request(s) can be obtained through contacting me below.
+			</p>
+
+			<h2>Contact</h2>
+			<p>
+			You can contact me at <strong>me [at] jackinfurs [dot] ie</strong>.<br/>
+			Additionally, you may also find me on <a href="https://www.codeberg.org/jackinfurs">Codeberg</a>, <a href="https://www.github.com/jackinfurs">GitHub</a>, and <a href="https://www.linkedin.com/in/jackinfurs">LinkedIn</a> under the same username.
+			</p>
+			<p>
+			Should you need my <a href="pgp">PGP key</a>, my fingerprint is below:<br/>
+			<code>DD6F 61AF 08E0 7F9F 1158 A323 8DBB ADD9 AF79 695F</code>
+			</p>
+		</main>
+
+		<footer>
+			&#127279; jackinfurs, 2026
+		</footer>
+	</div>
 </body>
 
 </html>
