fix: rm index.html from address bar

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 			<a href="https://www.codeberg.org/jackinfurs/" title="codeberg.org/jackinfurs"><img src="assets/codeberg.svg" style="width:30px; height:30px;" alt="jackinfurs on Codeberg"/></a>
 			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="assets/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
 			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="assets/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
-			<a href="index.html" target="_self"><strong>home</strong></a>
-			<a href="music/index.html" target="_self">music</a>
-			<a href="blog/index.html" target="_self">blog</a>
+			<a href="/" target="_self"><strong>home</strong></a>
+			<a href="/music/" target="_self">music</a>
+			<a href="/blog/" target="_self">blog</a>
 		</nav>
 
 		<main>
@@ -73,7 +73,7 @@
 			</p>
 			<p>
 			Additionally, I have worked commercially as a service engineer with my family since the age of fourteen. Originally it was so that I could afford my first guitar, which has long-since been paid for.<br/>
-			Among many other personal interests outside of work, I like fixing up audio equipment to make interesting noises. You can listen to a few of the bits I've made on <a href="music/index.html" target="_self">this page</a>. :)
+			Among many other personal interests outside of work, I like fixing up audio equipment to make interesting noises. You can listen to a few of the bits I've made on <a href="/music/" target="_self">this page</a>. :)
 			</p>
 
 			<h2>Aspirations</h2>
@@ -85,7 +85,7 @@
 			As for occupational aspirations, firstly I aim to operate in the field of technical/scientific computing, before acting as a system administrator for high-performance computing clusters, and finally contributing academically to the field of high-performance computing through post-doctoral research.
 			</p>
 			<p>
-			You can view my public CV <b><a href="assets/cv.pdf">here</a></b>.<br/>
+			You can view my public CV <b><a href="/assets/cv.pdf">here</a></b>.<br/>
 			Do note however that certain personal details are redacted (for brevity/privacy). A more personalised CV catered to your request(s) can be obtained through contacting me below.
 			</p>
 
@@ -95,7 +95,7 @@
 			Additionally, you may also find me on <a href="https://www.codeberg.org/jackinfurs">Codeberg</a>, <a href="https://www.github.com/jackinfurs">GitHub</a>, and <a href="https://www.linkedin.com/in/jackinfurs">LinkedIn</a> under the same username.
 			</p>
 			<p>
-			Should you need my <a href="pgp">PGP key</a>, my fingerprint is below:<br/>
+			Should you need my <a href="/pgp">PGP key</a>, my fingerprint is below:<br/>
 			<code>DD6F 61AF 08E0 7F9F 1158 A323 8DBB ADD9 AF79 695F</code>
 			</p>
 		</main>
