nav: add whitespace between links and pages

--- a/music/index.html
+++ b/music/index.html
@@ -51,6 +51,7 @@
 			<a href="https://www.codeberg.org/jackinfurs/" title="codeberg.org/jackinfurs"><img src="../assets/codeberg.svg" style="width:30px; height:30px;" alt="jackinfurs on Codeberg"/></a>
 			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="../assets/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
 			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="../assets/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
+			<wbr/>
 			<a href="/" target="_self">home</a>
 			<a href="/music/" target="_self"><strong>music</strong></a>
 			<a href="/blog/" target="_self">blog</a>
