fix: add absolute URLs for opengraph/twt

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<meta property="og:site_name" content="jackinfurs"/>
 	<meta property="og:title" content="jackinfurs"/>
     <meta property="og:description" content="The personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta property="og:image" content="assets/icon.png"/> <!-- TODO get something nicer for the cover image here, also provide actual URLs -->
+	<meta property="og:image" content="https://raw.githubusercontent.com/jackinfurs/jackinfurs.github.io/refs/heads/main/assets/icon.png"/> <!-- TODO get something nicer for the cover image here, also provide actual URLs -->
 	<meta property="og:image:alt" content="jackinfurs"/>
     <meta property="og:url" content="https://jackinfurs.ie/"/>
 	<meta property="og:type" content="website"/>
@@ -33,7 +33,7 @@
 
 	<meta name="twitter:title" content="jackinfurs"/>
 	<meta name="twitter:description" content="The personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta name="twitter:image" content="assets/icon.png"/> <!-- TODO get something nicer for the cover image here -->
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/jackinfurs/jackinfurs.github.io/refs/heads/main/assets/icon.png"/> <!-- TODO get something nicer for the cover image here -->
 	<meta name="twitter:image:alt" content="jackinfurs"/>
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:creator" content="jackinfurs"/>
@@ -66,7 +66,7 @@
 			I am in my <b>final year</b> of completing a four-year BSc. Computer Science degree at <a href="https://hub.ucd.ie/usis/!W_HU_MENU.P_PUBLISH?p_tag=COURSE&MAJR=CSSA&KEYWORD=bsc%20computer%20science">University College Dublin</a>.<br/>
 			Under the supervision of <a href="https://people.ucd.ie/ravi.manumachu">Ravi Manumachu, Ph.D</a>, my research addresses <strong>the evolution of dynamic voltage/frequency scaling governors in the Linux kernel, specifically with their applications to the field of energy-efficient high-performance computing.</strong>
 			</p>
-			<!-- <img src="assets/icon.png" style="width: 350px; height: 350px; margin: 50px;" alt="Portrait photo"/> -->
+			<!-- <img src="/assets/icon.png" style="width: 350px; height: 350px; margin: 50px;" alt="Portrait photo"/> -->
 
 			<h2>Background</h2>
 			<p>
@@ -86,7 +86,7 @@
 			As for occupational aspirations, firstly I aim to operate in the field of technical/scientific computing, before acting as a system administrator for high-performance computing clusters, and finally contributing academically to the field of high-performance computing through post-doctoral research.
 			</p>
 			<p>
-			You can view my public CV <b><a href="/assets/cv.pdf">here</a></b>.<br/>
+			You can view my public CV <b><a href="https://raw.githubusercontent.com/jackinfurs/jackinfurs.github.io/refs/heads/main/assets/cv.pdf">here</a></b>.<br/>
 			Do note however that certain personal details are redacted (for brevity/privacy). A more personalised CV catered to your request(s) can be obtained through contacting me below.
 			</p>
 
