--- a/music/index.html
+++ b/music/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en-ie">
 
-<!-- made with human hands. 
-      https://notbyai.fyi/  -->
+<!-- made with the hands of a human. 
+          https://notbyai.fyi/      -->
 
 <head>
     <title>jackinfurs/music</title>
@@ -25,7 +25,7 @@
 	<meta property="og:site_name" content="jackinfurs/music"/>
 	<meta property="og:title" content="jackinfurs/music"/>
     <meta property="og:description" content="The music page of the personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta property="og:image" content="../assets/icon.png"/> <!-- TODO get something nicer for the cover image here, also provide actual URLs -->
+	<meta property="og:image" content="https://raw.githubusercontent.com/jackinfurs/jackinfurs.github.io/refs/heads/main/assets/icon.png"/> <!-- TODO get something nicer for the cover image here, also provide actual URLs -->
 	<meta property="og:image:alt" content="jackinfurs"/>
     <meta property="og:url" content="https://jackinfurs.ie/music"/>
 	<meta property="og:type" content="website"/>
@@ -33,7 +33,7 @@
 
 	<meta name="twitter:title" content="jackinfurs/music"/>
 	<meta name="twitter:description" content="The music page of the personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta name="twitter:image" content="../assets/icon.png"/> <!-- TODO get something nicer for the cover image here -->
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/jackinfurs/jackinfurs.github.io/refs/heads/main/assets/icon.png"/> <!-- TODO get something nicer for the cover image here -->
 	<meta name="twitter:image:alt" content="jackinfurs"/>
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:creator" content="jackinfurs"/>
