fix: pgp -> pgp.asc

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			Additionally, you may also find me on <a href="https://www.codeberg.org/jackinfurs">Codeberg</a>, <a href="https://www.github.com/jackinfurs">GitHub</a>, and <a href="https://www.linkedin.com/in/jackinfurs">LinkedIn</a> under the same username.
 			</p>
 			<p>
-			Should you need my <a href="/pgp">PGP key</a>, my fingerprint is below:<br/>
+			Should you need my <a href="https://jackinfurs.ie/pgp.asc">PGP key</a>, my fingerprint is below:<br/>
 			<code>DD6F 61AF 08E0 7F9F 1158 A323 8DBB ADD9 AF79 695F</code>
 			</p>
 		</main>
