fix: (attempt to) disable darkmode plugins on site

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<meta name="description" content="The homepage of the personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
 	<meta name="keywords" content="jackinfurs, Jack Dunne"/>
 	<meta name="robots" content="index, follow"/>
+    <meta name="color-scheme" content="light"/>
+    <meta name="darkreader-lock"/>
 
 	<!-- TODO use webp -->
 	<link rel="canonical" href="https://jackinfurs.ie/"/>
