--- a/music/index.html
+++ b/music/index.html
@@ -13,6 +13,8 @@
 	<meta name="description" content="The music page of the personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
 	<meta name="keywords" content="jackinfurs, Jack Dunne, music"/>
 	<meta name="robots" content="index, follow"/>
+    <meta name="color-scheme" content="light"/>
+    <meta name="darkreader-lock"/>
 
 	<!-- TODO use webp -->
 	<link rel="canonical" href="https://jackinfurs.ie/music"/>
