--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<!-- TODO use webp -->
 	<link rel="canonical" href="https://jackinfurs.ie/"/>
-	<link rel="icon" type="image/png" sizes="64x64" href="assets/icon64.png"/>
+	<link rel="icon" type="image/x-icon" href="assets/icon64.ico"/>
 	<link rel="preload stylesheet" as="style" type="text/css" href="css/main.css"/>
 
 	<meta name="author" content="Jack Dunne (jackinfurs)"/>
@@ -27,7 +27,7 @@
 	<meta property="og:site_name" content="jackinfurs"/>
 	<meta property="og:title" content="jackinfurs"/>
     <meta property="og:description" content="The personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta property="og:image" content="https://jackinfurs.ie/assets/icon.png"/> <!-- TODO get something nicer for the cover image here, also provide actual URLs -->
+	<meta property="og:image" content="https://jackinfurs.ie/assets/icon.webp"/> <!-- TODO get something nicer for the cover image here, also provide actual URLs -->
 	<meta property="og:image:alt" content="jackinfurs"/>
     <meta property="og:url" content="https://jackinfurs.ie/"/>
 	<meta property="og:type" content="website"/>
@@ -35,7 +35,7 @@
 
 	<meta name="twitter:title" content="jackinfurs"/>
 	<meta name="twitter:description" content="The personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta name="twitter:image" content="https://jackinfurs.ie/assets/icon.png"/> <!-- TODO get something nicer for the cover image here -->
+	<meta name="twitter:image" content="https://jackinfurs.ie/assets/icon.webp"/> <!-- TODO get something nicer for the cover image here -->
 	<meta name="twitter:image:alt" content="jackinfurs"/>
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:creator" content="jackinfurs"/>
@@ -68,7 +68,7 @@
 			I am in my <b>final year</b> of completing a four-year BSc. Computer Science degree at <a href="https://hub.ucd.ie/usis/!W_HU_MENU.P_PUBLISH?p_tag=COURSE&MAJR=CSSA&KEYWORD=bsc%20computer%20science">University College Dublin</a>.<br/>
 			Under the supervision of <a href="https://people.ucd.ie/ravi.manumachu">Ravi Manumachu, Ph.D</a>, my research addresses <strong>the evolution of dynamic voltage/frequency scaling governors in the Linux kernel, specifically with their applications to the field of energy-efficient high-performance computing.</strong>
 			</p>
-			<!-- <img src="/assets/icon.png" style="width: 350px; height: 350px; margin: 50px;" alt="Portrait photo"/> -->
+			<!-- <img src="/assets/icon.webp" style="width: 350px; height: 350px; margin: 50px;" alt="Portrait photo"/> -->
 
 			<h2>Background</h2>
 			<p>
