--- a/music/index.html
+++ b/music/index.html
@@ -18,7 +18,7 @@
 
 	<!-- TODO use webp -->
 	<link rel="canonical" href="https://jackinfurs.ie/music"/>
-	<link rel="icon" type="image/png" sizes="64x64" href="../assets/icon64.png"/>
+	<link rel="icon" type="image/x-icon" href="../assets/icon64.ico"/>
 	<link rel="preload stylesheet" as="style" type="text/css" href="../css/main.css"/>
 
 	<meta name="author" content="Jack Dunne (jackinfurs)"/>
@@ -27,7 +27,7 @@
 	<meta property="og:site_name" content="jackinfurs/music"/>
 	<meta property="og:title" content="jackinfurs/music"/>
     <meta property="og:description" content="The music page of the personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta property="og:image" content="https://jackinfurs.ie/assets/icon.png"/> <!-- TODO get something nicer for the cover image here, also provide actual URLs -->
+	<meta property="og:image" content="https://jackinfurs.ie/assets/icon.webp"/> <!-- TODO get something nicer for the cover image here, also provide actual URLs -->
 	<meta property="og:image:alt" content="jackinfurs"/>
     <meta property="og:url" content="https://jackinfurs.ie/music"/>
 	<meta property="og:type" content="website"/>
@@ -35,7 +35,7 @@
 
 	<meta name="twitter:title" content="jackinfurs/music"/>
 	<meta name="twitter:description" content="The music page of the personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta name="twitter:image" content="https://jackinfurs.ie/assets/icon.png"/> <!-- TODO get something nicer for the cover image here -->
+	<meta name="twitter:image" content="https://jackinfurs.ie/assets/icon.webp"/> <!-- TODO get something nicer for the cover image here -->
 	<meta name="twitter:image:alt" content="jackinfurs"/>
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:creator" content="jackinfurs"/>
