--- a/music/index.html
+++ b/music/index.html
@@ -18,8 +18,8 @@
 
 	<!-- TODO use webp -->
 	<link rel="canonical" href="https://jackinfurs.ie/music"/>
-	<link rel="icon" type="image/x-icon" href="../assets/icon64.ico"/>
-	<link rel="preload stylesheet" as="style" type="text/css" href="../css/main.css"/>
+	<link rel="icon" type="image/x-icon" href="/assets/icon64.ico"/>
+	<link rel="preload stylesheet" as="style" type="text/css" href="/css/main.css"/>
 
 	<meta name="author" content="Jack Dunne (jackinfurs)"/>
 	<meta name="theme-color" content="#100f0f"/>
@@ -50,9 +50,9 @@
 		</header>
 
 		<nav>
-			<a href="https://www.codeberg.org/jackinfurs/" title="codeberg.org/jackinfurs"><img src="../assets/codeberg.svg" style="width:30px; height:30px;" alt="jackinfurs on Codeberg"/></a>
-			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="../assets/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
-			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="../assets/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
+			<a href="https://www.codeberg.org/jackinfurs/" title="codeberg.org/jackinfurs"><img src="/assets/codeberg.svg" style="width:30px; height:30px;" alt="jackinfurs on Codeberg"/></a>
+			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="/assets/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
+			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="/assets/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
 			<wbr/>
 			<a href="/" target="_self">home</a>
 			<a href="/music/" target="_self"><strong>music</strong></a>
@@ -69,7 +69,7 @@
 			</p>
 			<figure>
 				<audio controls style="display: block; margin: 0 auto; width: 50%;">
-					<source src="../assets/music/ilmp.mp3" type="audio/mpeg"/>
+					<source src="/assets/music/ilmp.mp3" type="audio/mpeg"/>
 					I'd have loven to let you listen to some music, but it seems your browser won't let me.
 				</audio>
 			</figure>
