--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <meta name="color-scheme" content="light"/>
     <meta name="darkreader-lock"/>
 
-	<!-- TODO use webp -->
 	<link rel="canonical" href="https://jackinfurs.ie"/>
 	<link rel="icon" type="image/x-icon" href="/assets/icon64.ico"/>
 	<link rel="preload stylesheet" as="style" type="text/css" href="/css/main.css"/>
@@ -27,7 +26,7 @@
 	<meta property="og:site_name" content="jackinfurs"/>
 	<meta property="og:title" content="jackinfurs"/>
     <meta property="og:description" content="The personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta property="og:image" content="https://jackinfurs.ie/assets/icon.webp"/> <!-- TODO get something nicer for the cover image here, also provide actual URLs -->
+	<meta property="og:image" content="https://jackinfurs.ie/assets/icon.webp"/> <!-- TODO get something nicer for the cover image here -->
 	<meta property="og:image:alt" content="jackinfurs"/>
     <meta property="og:url" content="https://jackinfurs.ie"/>
 	<meta property="og:type" content="website"/>
