fix: mv icons to /assets/icons and use favicon.ico in root dir instead of png

--- a/404.html
+++ b/404.html
@@ -5,13 +5,12 @@
           https://notbyai.fyi/      -->
 
 <head>
-    <title>/home/jackinfurs</title>
+    <title>jackinfurs/404</title>
 	<base target="_blank" rel="noopener"/>
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel="icon" type="image/png" sizes="64x64" href="assets/icon64.png"/>
-	<link rel="preload stylesheet" as="style" type="text/css" href="css/main.css"/>
+	<link rel="preload stylesheet" as="style" type="text/css" href="/css/main.css"/>
 
 	<meta name="author" content="Jack Dunne (jackinfurs)"/>
 </head>
@@ -24,9 +23,9 @@
 		</header>
 
 		<nav>
-			<a href="https://www.codeberg.org/jackinfurs/" title="codeberg.org/jackinfurs"><img src="assets/codeberg.svg" style="width:30px; height:30px;" alt="jackinfurs on Codeberg"/></a>
-			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="assets/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
-			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="assets/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
+			<a href="https://www.codeberg.org/jackinfurs/" title="codeberg.org/jackinfurs"><img src="/assets/icons/codeberg.svg" style="width:30px; height:30px;" alt="jackinfurs on Codeberg"/></a>
+			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="/assets/icons/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
+			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="/assets/icons/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
 			<wbr/>
 			<a href="/" target="_self"><strong>home</strong></a>
 			<a href="/music/" target="_self">music</a>
