--- a/music/index.html
+++ b/music/index.html
@@ -17,7 +17,6 @@
     <meta name="darkreader-lock"/>
 
 	<link rel="canonical" href="https://jackinfurs.ie/music"/>
-	<link rel="icon" type="image/x-icon" href="/assets/icon64.ico"/>
 	<link rel="preload stylesheet" as="style" type="text/css" href="/css/main.css"/>
 
 	<meta name="author" content="Jack Dunne (jackinfurs)"/>
@@ -26,7 +25,7 @@
 	<meta property="og:site_name" content="jackinfurs/music"/>
 	<meta property="og:title" content="jackinfurs/music"/>
     <meta property="og:description" content="The music page of the personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta property="og:image" content="https://jackinfurs.ie/assets/icon.webp"/> <!-- TODO get something nicer for the cover image here -->
+	<meta property="og:image" content="https://jackinfurs.ie/assets/icons/icon.webp"/> <!-- TODO get something nicer for the cover image here -->
 	<meta property="og:image:alt" content="jackinfurs"/>
     <meta property="og:url" content="https://jackinfurs.ie/music"/>
 	<meta property="og:type" content="website"/>
@@ -34,7 +33,7 @@
 
 	<meta name="twitter:title" content="jackinfurs/music"/>
 	<meta name="twitter:description" content="The music page of the personal website of Jack Dunne (jackinfurs); final year BSc. Computer Science at University College Dublin."/>
-	<meta name="twitter:image" content="https://jackinfurs.ie/assets/icon.webp"/> <!-- TODO get something nicer for the cover image here -->
+	<meta name="twitter:image" content="https://jackinfurs.ie/assets/icons/icon.webp"/> <!-- TODO get something nicer for the cover image here -->
 	<meta name="twitter:image:alt" content="jackinfurs"/>
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:creator" content="jackinfurs"/>
@@ -49,9 +48,9 @@
 		</header>
 
 		<nav>
-			<a href="https://www.codeberg.org/jackinfurs/" title="codeberg.org/jackinfurs"><img src="/assets/codeberg.svg" style="width:30px; height:30px;" alt="jackinfurs on Codeberg"/></a>
-			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="/assets/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
-			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="/assets/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
+			<a href="https://www.codeberg.org/jackinfurs/" title="codeberg.org/jackinfurs"><img src="/assets/icons/codeberg.svg" style="width:30px; height:30px;" alt="jackinfurs on Codeberg"/></a>
+			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="/assets/icons/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
+			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="/assets/icons/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
 			<wbr/>
 			<a href="/" target="_self">home</a>
 			<a href="/music/" target="_self"><strong>music</strong></a>
