--- a/cc/index.html
+++ b/cc/index.html
@@ -4,13 +4,13 @@
  [2m│(B[m           [1mJack Dunne(B[m, final year cs student           [2m│
  [2m│(B[m              @ university college dublin(B[m              [2m│
  [2m│                                                       │
- [2m│(B[m        [1mweb:(B[m                      jackinfurs.ie        │
+ [2m│(B[m        [1mweb:(B[m                      jackinfurs.ie        [2m│
  [2m│(B[m        [1memail:(B[m                 me[2m@jackinfurs.ie        │
  [2m│(B[m        [1mgithub:(B[m           [2mgithub.com/(B[mjackinfurs        [2m│
  [2m│(B[m        [1mcodeberg:(B[m       [2mcodeberg.org/(B[mjackinfurs        [2m│
  [2m│(B[m        [1mlinkedin:(B[m    [2mlinkedin.com/in/(B[mjackinfurs        [2m│
  [2m│                                                       │
- [2m│(B[m        [1mcard:(B[m         [33mcurl -sL jackinfurs.ie/cc(B[m        [2m│
+ [2m│(B[m             [33mcurl https://jackinfurs.ie/cc/(B[m[2m            │
  [2m│                                                       │
  [2m╰───────────────────────────────────────────────────────╯
 
