fix: add `links.js` for opening external domains in new tabs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
     <title>/home/jackinfurs</title>
-	<base target="_blank" rel="noopener"/>
+	<script src="/assets/js/links.js" defer></script>
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -52,19 +52,22 @@
 			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="/assets/icons/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
 			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="/assets/icons/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
 			<wbr/>
-			<a href="/" target="_self"><strong>home</strong></a>
-			<a href="/music/" target="_self">music</a>
-			<a href="/blog/" target="_self">blog</a>
+			<a href="/"><strong>home</strong></a>
+			<a href="/music/">music</a>
+			<a href="/blog/">blog</a>
 		</nav>
 
 		<main>
 			<h2>About</h2>
 			<p>
-			My name is Jack, of Dublin, Ireland.
+			My name is Jack, proudly of Dublin, Ireland.
 			</p>
 			<p>
 			I am in my <b>final year</b> of completing a four-year BSc. Computer Science degree at <a href="https://hub.ucd.ie/usis/!W_HU_MENU.P_PUBLISH?p_tag=COURSE&MAJR=CSSA&KEYWORD=bsc%20computer%20science">University College Dublin</a>.<br/>
 			Under the supervision of <a href="https://people.ucd.ie/ravi.manumachu/">Ravi Manumachu, Ph.D</a>, my research addresses <strong>the evolution of dynamic voltage/frequency scaling governors in the Linux kernel, specifically with their applications to the field of energy-efficient high-performance computing.</strong>
+			</p>
+			<p>
+				This site is still under construction, so check back for updates on what I get up to here & then.
 			</p>
 			<!-- <img src="/assets/icon.webp" style="width: 350px; height: 350px; margin: 50px;" alt="Portrait photo"/> -->
 
