--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 
 <head>
     <title>jackinfurs/404</title>
-	<base target="_blank" rel="noopener"/>
+	<script src="/assets/js/links.js" defer></script>
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -27,9 +27,9 @@
 			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="/assets/icons/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
 			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="/assets/icons/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
 			<wbr/>
-			<a href="/" target="_self">home</a>
-			<a href="/music/" target="_self">music</a>
-			<a href="/blog/" target="_self">blog</a>
+			<a href="/">home</a>
+			<a href="/music/">music</a>
+			<a href="/blog/">blog</a>
 		</nav>
 
 		<main>
