--- a/music/index.html
+++ b/music/index.html
@@ -6,7 +6,7 @@
 
 <head>
     <title>jackinfurs/music</title>
-	<base target="_blank" rel="noopener"/>
+	<script src="/assets/js/links.js" defer></script>
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -52,9 +52,9 @@
 			<a href="https://www.github.com/jackinfurs/" title="github.com/jackinfurs"><img src="/assets/icons/github.svg" style="width:30px; height:30px;" alt="jackinfurs on GitHub"/></a>
 			<a href="https://www.linkedin.com/in/jackinfurs/" title="linkedin.com/in/jackinfurs"><img src="/assets/icons/linkedin.svg" style="width:30px; height:30px;" alt="jackinfurs on LinkedIn"/></a>
 			<wbr/>
-			<a href="/" target="_self">home</a>
-			<a href="/music/" target="_self"><strong>music</strong></a>
-			<a href="/blog/" target="_self">blog</a>
+			<a href="/">home</a>
+			<a href="/music/"><strong>music</strong></a>
+			<a href="/blog/">blog</a>
 		</nav>
 
 		<main>
@@ -69,7 +69,7 @@
 				  .then(t => {
 					  const txt = `${t.artist}'s ${t.title}.`;
 					  document.getElementById("lastfm")
-						  .innerHTML += `<a href="${t.url}">${txt}</a>`;
+						  .innerHTML += `<a href="${t.url}" target="_blank" rel="noopener">${txt}</a>`;
 				  })
 				  .catch(() => {
 				    document.getElementById("lastfm").textContent +=
