seo: add link for icon

--- a/404.html
+++ b/404.html
@@ -10,9 +10,14 @@
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="color-scheme" content="light"/>
+    <meta name="darkreader-lock"/>
+
+	<link rel="icon" href="/favicon.ico"/>
 	<link rel="preload stylesheet" as="style" type="text/css" href="/css/main.css"/>
 
 	<meta name="author" content="Jack Dunne (jackinfurs)"/>
+	<meta name="theme-color" content="#100f0f"/>
 </head>
 
 
