--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="color-scheme" content="light"/>
     <meta name="darkreader-lock"/>
 
+	<link rel="icon" href="/favicon.ico"/>
 	<link rel="canonical" href="https://jackinfurs.ie"/>
 	<link rel="preload stylesheet" as="style" type="text/css" href="/css/main.css"/>
 
