index: stop overstating :/

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			</p>
 			<p>
 			I am in my <b>final year</b> of completing a four-year BSc. Computer Science degree at <a href="https://hub.ucd.ie/usis/!W_HU_MENU.P_PUBLISH?p_tag=COURSE&MAJR=CSSA&KEYWORD=bsc%20computer%20science">University College Dublin</a>.<br/>
-			Under the supervision of <a href="https://people.ucd.ie/ravi.manumachu/">Ravi Manumachu, Ph.D</a>, my research addresses <strong>the evolution of dynamic voltage/frequency scaling governors in the Linux kernel, specifically with their applications to the field of energy-efficient high-performance computing.</strong>
+			Under the supervision of <a href="https://people.ucd.ie/ravi.manumachu/">Ravi Manumachu, Ph.D</a>, my research addresses <strong>the evolution of CPU dynamic voltage/frequency scaling governors in the Linux kernel, specifically with their applications to the field of energy-efficient high-performance scientific computing.</strong>
 			</p>
 			<p>
 				This site is still under construction, so check back for updates on what I get up to here & then.
@@ -74,7 +74,7 @@
 
 			<h2>Background</h2>
 			<p>
-			Aside from working on my degree, I help to maintain <strong><a href="https://www.codeberg.org/jackinfurs/dwl">dwl</a></strong>; a hackable <a href="https://en.wikipedia.org/wiki/Tiling_window_manager#Dynamic_window_manager">dynamic window manager</a> intending to serve the same role for the Wayland protocol as its predecessor <a href="https://dwm.suckless.org">dwm</a> does for X11.
+			Aside from working on my degree, I contribute the odd time to <strong><a href="https://www.codeberg.org/jackinfurs/dwl">dwl</a></strong>; a hackable <a href="https://en.wikipedia.org/wiki/Tiling_window_manager#Dynamic_window_manager">dynamic window manager</a> intending to serve the same role for the Wayland protocol as its predecessor <a href="https://dwm.suckless.org">dwm</a> does for X11.
 			</p>
 			<p>
 			Additionally, I have worked commercially as a service engineer with my family since the age of fourteen. Originally it was so that I could afford my first guitar, which has long-since been paid for.<br/>
