--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			As for occupational aspirations, firstly I aim to operate in the field of technical/scientific computing, before acting as a system administrator for high-performance computing clusters, and finally contributing academically to the field of high-performance computing through post-doctoral research.
 			</p>
 			<p>
-			You can view my public CV <b><a href="/assets/cv.pdf">here</a></b>.<br/>
+			You can view my public CV <b><a href="/assets/cv.pdf" target="_blank">here</a></b>.<br/>
 			Do note however that certain personal details are redacted (for brevity/privacy). A more personalised CV catered to your request(s) can be obtained through contacting me below.
 			</p>
 
