txt: add gpa, rm some state TODOs, bit of grammar

--- a/index.html
+++ b/index.html
@@ -64,13 +64,12 @@
 			My name is Jack, proudly of Dublin, Ireland.
 			</p>
 			<p>
-			I am in my <b>final year</b> of completing a four-year BSc. Computer Science degree at <a href="https://hub.ucd.ie/usis/!W_HU_MENU.P_PUBLISH?p_tag=COURSE&MAJR=CSSA&KEYWORD=bsc%20computer%20science">University College Dublin</a>.<br/>
+			I am in my <b>final year</b> of completing a four-year BSc. Computer Science degree at <a href="https://hub.ucd.ie/usis/!W_HU_MENU.P_PUBLISH?p_tag=COURSE&MAJR=CSSA&KEYWORD=bsc%20computer%20science">University College Dublin</a>, for which I currently maintain a GPA of 4.0.<br/>
 			Under the supervision of <a href="https://people.ucd.ie/ravi.manumachu/">Ravi Manumachu, Ph.D</a>, my research addresses <strong>the evolution of CPU dynamic voltage/frequency scaling governors in the Linux kernel, specifically with their applications to the field of energy-efficient high-performance scientific computing.</strong>
 			</p>
 			<p>
 				This site is still under construction, so check back for updates on what I get up to here & then.
 			</p>
-			<!-- <img src="/assets/icon.webp" style="width: 350px; height: 350px; margin: 50px;" alt="Portrait photo"/> -->
 
 			<h2>Background</h2>
 			<p>
@@ -82,7 +81,6 @@
 			</p>
 
 			<h2>Aspirations</h2>
-<!-- TODO: education (in bold) + grades -->
 			<p>
 			Broadly speaking, my primary research interests include <b>the applications of parallel computing across heterogeneous systems</b>; the reasoning for which led to me becoming a member of the <a href="https://www.sighpc.org">ACM's Special Interest Group for High-Performance Computing</a>.
 			</p>
