fix: close main tag in 404

--- a/404.html
+++ b/404.html
@@ -45,6 +45,7 @@
 			<p>
 			In which case, use the links above to direct yourself to one that <i>can</i> be found.
 			</p>
+        </main>
 
 		<footer>
 			&#127279; jackinfurs, 2026
